# lmntal-language-server

./: Cargo.toml  README.md
src/: analysis.rs  backend.rs  capabilities.rs  config.rs  diagnostics.rs  lib.rs  main.rs  parsing.rs  reference.rs  semantic_token.rs  symbol.rs  text_document.rs  utils.rs
src/analysis/: rule.rs  semantic_token.rs
