[package]
name = "lmntal-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34", features = ["full"] }
tower-lsp = { version = "0.20", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
chumsky = "0.9"
