[package]
name = "lmntal-language-server"
description = "A language server for LMNtal"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dashmap = "5.5"
env_logger = "0.11"
lmntalc = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
